:bug: Tamanho do hero não estava 100% pois a classe .valign não utiliza mais height: 100%;

--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,7 @@ p, span {
 }
 
 #hero {
+  height: 100%;
   background: url("../images/hero.jpg") no-repeat;
   background-position: center;
   background-size: cover;
